Criou rota 404 e iniciou o menu

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meu Site ExpressJS</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
+      body {
+        background-color: #ccc;
+      }
+      .menu {
+        background-color: #fff;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+      }
+    </style>
   </head>
-  <main>
-    <h3>Bem vindo(a) à Home!</h3>
-    <p>lorem5</p>
-  </main>
+  <nav class="menu">
+    <img
+      width="150"
+      src="https://img.freepik.com/vetores-gratis/vetor-de-letra-l-maiuscula-botanica_53876-172663.jpg"
+      alt=""
+    />
+    <ul>
+      <a href="/">HOME</a>
+      <a href="/sobre">SOBRE</a>
+    </ul>
+  </nav>
   <body></body>
 </html>
