Criado o middleware para pasta Public

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,32 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../public/css/global.css" />
     <title>Meu Site ExpressJS</title>
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-      }
-      body {
-        background-color: #ccc;
-      }
-      .menu {
-        background-color: #fff;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-      }
-    </style>
+    <link rel="stylesheet" href="../../public/css/global.css" />
   </head>
   <nav class="menu">
-    <img
-      width="150"
-      src="https://img.freepik.com/vetores-gratis/vetor-de-letra-l-maiuscula-botanica_53876-172663.jpg"
-      alt=""
-    />
+    <a href="/">
+      <img
+        width="150"
+        src="https://img.freepik.com/vetores-gratis/vetor-de-letra-l-maiuscula-botanica_53876-172663.jpg"
+        alt=""
+      />
+    </a>
     <ul>
-      <a href="/">HOME</a>
+      <a href="/contato">CONTATO</a>
       <a href="/sobre">SOBRE</a>
     </ul>
   </nav>
