--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,6 +18,7 @@
     <ul>
       <a href="/contato">CONTATO</a>
       <a href="/sobre">SOBRE</a>
+      <a class="bt-logar" href="#">LOGAR</a>
     </ul>
   </nav>
   <body></body>
