Rotas, ajustes do css + criação de pagins

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,8 +18,12 @@
     <ul>
       <a href="/contato">CONTATO</a>
       <a href="/sobre">SOBRE</a>
-      <a class="bt-logar" href="#">LOGAR</a>
+      <a class="bt-logar" href="/logar">LOGAR</a>
     </ul>
   </nav>
-  <body></body>
+  <body>
+    <main>
+      <h3>Página Inicial</h3>
+    </main>
+  </body>
 </html>
